crates/plotnik-lib/tests/04-emit/alternations/all_branches_impossible.txt
Q = [(function_declaration .! (identifier)) (binary_expression left: (_) left: (_))]
==== diagnostics ====
error: with strict adjacency (`.!`), the first child of `function_declaration` must be `identifier`, but `function_declaration` begins with `"async"` or `"function"`
 --> query.ptk:1:7
  |
1 | Q = [(function_declaration .! (identifier)) (binary_expression left: (_) left: (_))]
  |       ^^^^^^^^^^^^^^^^^^^^
  |
help: `.!` allows nothing between — not even anonymous tokens or comments; the soft anchor `.` skips those: `(function_declaration . (identifier))`

error: a `binary_expression` has one `left`, but this pattern binds `left` 2 times
 --> query.ptk:1:46
  |
1 | Q = [(function_declaration .! (identifier)) (binary_expression left: (_) left: (_))]
  |                                              ^^^^^^^^^^^^^^^^^
  |
help: keep a single `left:` child
